--- a/src/main/resources/META-INF/resources/california-layout/template.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/template.xhtml
@@ -15,10 +15,11 @@
         <title><ui:insert name="title">SMB ERP</ui:insert></title>
         <h:outputScript name="js/nanoscroller.js" library="california-layout" />
         <h:outputScript name="js/layout.js" library="california-layout" />
+        <h:outputScript name="js/pfcrud.js"/>
         <ui:insert name="head"/>
     </h:head>
 
-    <h:body styleClass="main-body" onunload="savepage();">
+    <h:body styleClass="main-body">
         <p:ajaxStatus style="width:32px;height:32px;position:fixed;right:7px;bottom:7px">
            <f:facet name="start">
                <i class="fa fa-circle-o-notch fa-spin ajax-loader" aria-hidden="true"></i>
