--- a/src/main/resources/META-INF/resources/accounts/coa.xhtml
+++ b/src/main/resources/META-INF/resources/accounts/coa.xhtml
@@ -23,10 +23,12 @@
                         <f:facet name="left">
                             <p:commandButton title="New Account Group" icon="fas fa-folder-plus" 
                                              actionListener="#{chartOfAccountController.createNewAccountGroup()}"
-                                             disabled="#{chartOfAccountController.newGroupDisabled}" />
+                                             disabled="#{chartOfAccountController.newGroupDisabled}" 
+                                             oncomplete="PF('AccountEditDialog').show()" update=":AccountForm"/>
                             <p:commandButton title="Edit Account Group" icon="fa fa-edit"
                                              actionListener="#{chartOfAccountController.editAccountGroup()}"
-                                             disabled="#{chartOfAccountController.editGroupDisabled}"/>
+                                             disabled="#{chartOfAccountController.editGroupDisabled}"
+                                             oncomplete="PF('AccountEditDialog').show()" update=":AccountForm"/>
                             <p:commandButton title="New Account" icon="fas fa-file-medical" 
                                              actionListener="#{chartOfAccountController.createNewAccount()}"
                                              disabled="#{chartOfAccountController.newAccountDisabled}"/>
