--- a/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
+++ b/src/main/resources/META-INF/resources/california-layout/sidebar.xhtml
@@ -143,6 +143,9 @@
                             <p:menuitem id="acc_accmaster" value="Accounts"
                                         icon="fa fa-fw fa-sitemap" 
                                         outcome="/accounts/coa.xhtml" />
+                            <p:menuitem id="busdoc_settings" value="Document Settings"
+                                        icon="fas fa-sliders-h" 
+                                        outcome="/busdoc/busdocsettings.xhtml" />
                         </p:submenu>
                     </pc:menu>
                 </h:form>
