--- a/src/main/resources/META-INF/resources/busdoc/busdoclist.xhtml
+++ b/src/main/resources/META-INF/resources/busdoc/busdoclist.xhtml
@@ -5,11 +5,11 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/california-layout/template.xhtml">
     <ui:define name="title">
-        Business Document Settings
+        Business Document List
     </ui:define>
 
     <ui:define name="breadcrumb">
-        Business Document Settings
+        Business Document List
     </ui:define>
 
     <ui:define name="content">
@@ -19,9 +19,9 @@
 
                     <div class="ui-g-12 ui-lg-12">
                         <p:dataTable id="bustable" var="bus" widgetVar="btable"
-                                     value="#{busDocController.items}"
+                                     value="#{busDocListController.items}"
                                      selectionMode="single"
-                                     selection="#{busDocController.selected}"
+                                     selection="#{busDocListController.selected}"
                                      rowKey="#{bus.docno}"
                                      reflow="true"
                                      emptyMessage="No Document Definition found">
@@ -29,18 +29,18 @@
                             <f:facet name="header">
                                 List of Documents
                                 <p:commandButton id="btnrefresh" style="float: right"
-                                                 actionListener="#{busDocController.refresh()}"
+                                                 actionListener="#{busDocListController.refresh()}"
                                                  update="@form :growl" icon="fa fa-refresh" />
 
                                 <p:commandButton id="btnedit" title="Edit Business Document Definition" icon="fa fa-pencil" process="@this" 
                                                  style="float: right"
-                                                 disabled="#{empty busDocController.selected}" 
-                                                 actionListener="#{busDocController.edit_in_tab()}"
+                                                 disabled="#{empty busDocListController.selected}" 
+                                                 actionListener="#{busDocListController.edit_in_tab()}"
                                                  ajax="false" onclick="form.target = '_blank'"/>
 
                                 <p:commandButton id="btnnew" title="New Business Document Definition" icon="fa fa-plus" process="@this"
                                                  style="float: right"
-                                                 actionListener="#{busDocController.new_in_tab()}"
+                                                 actionListener="#{busDocListController.new_in_tab()}"
                                                  ajax="false" onclick="form.target = '_blank'"/>
                             </f:facet>
 
